[gd_scene load_steps=5 format=3 uid="uid://c6sd4tp3c5p78"]

[ext_resource type="Script" path="res://Scripts/Actors/Objects/Bullet.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dc08pb5qidgdi" path="res://Assets/Actors/objects/bloodsigilplaceholder.png" id="2"]

[sub_resource type="CircleShape2D" id="2"]
radius = 12.3065

[sub_resource type="ParticleProcessMaterial" id="1"]
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 1.0
spread = 45.39
flatness = 1.0
gravity = Vector3(0, 98, 0)
color = Color(0.886275, 0, 0, 1)

[node name="BloodSigil" type="Area2D"]
collision_layer = 4
collision_mask = 266
input_pickable = false
script = ExtResource("1")
speed = Vector2(1000, 1000)

[node name="Bulletplaceholderispenttoolongon" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2(14.6, 0)
shape = SubResource("2")

[node name="BloodParticles" type="GPUParticles2D" parent="."]
position = Vector2(-24.6, -1.39835e-11)
rotation = 1.57079
amount = 30
process_material = SubResource("1")
lifetime = 7.0
speed_scale = 4.0
randomness = 1.0

[node name="SeekingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SeekingArea"]
polygon = PackedVector2Array(-12, 0, 25, -125, 500, -450, 500, 450, 25, 125)

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
